Prevent Kuonimatt dish overlap

--- a/src/styles.css
+++ b/src/styles.css
@@ -906,7 +906,7 @@ select {
 }
 
 .kuo-dish:nth-child(2) {
-  top: 990px;
+  top: 1045px;
 }
 
 .kuo-dish:nth-child(2) h2 {
